test/compile_error/outofrange.conf.1.def
config out_of_range_conf {
    foo : int[-100~10](100);
}
